# snake-sdl

./: CMakeLists.txt  CMakeSettings.json
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
snake/: CMakeLists.txt  main.cpp  snake.cpp  snake.h  snake.hpp
